# weather-query-test-task

./: .dockerignore  .env.sample  .gitignore  Dockerfile  Makefile  README.md  Readme_ru.md  alembic.ini  docker-compose-tests.yaml  docker-compose.yaml  pyproject.toml  pytest.ini  run.py  seed_superuser.py
migrations/: env.py
migrations/functions/on_update/: downgrade.sql  upgrade.sql
migrations/versions/: 2026_05_16_1900-30f69cbb29e6_add_uuid_v7_function.py  2026_05_16_1904-9f4a03477b42_onupdate_server_default_function.py  2026_05_16_1909-01967787f032_adding_auth_tables_and_triggers.py  2026_05_16_1925-8dd715a54ad8_adding_weather_history_table.py
seed/: entrypoint.sh  entrypoint_local.sh  init.sh  seed_migrations.sh  seed_superuser.sh
src/: bootstrap.py  config.py  error_handlers.py  exceptions.py  loggers.py  main.py  middlewares.py
src/admin/: auth.py
src/admin/views/: __init__.py  (+2 more)
src/api/: __init__.py
src/authentication/: transport.py  user_manager.py
src/schemas/: __init__.py  base.py  message.py  pagination.py  responses.py  user.py  weather.py
src/tools/: retry.py
src/usecases/: __init__.py  update_note.py
src/utils/: __init__.py  csv.py  http_status.py  process.py  rate_limit.py  retry.py  string.py  thread.py
tests/: conftest.py  fixtures_database.py  fixtures_external_api.py  fixtures_real_connections.py  fixtures_testcontainer.py  seed_user.py  test_init.py
tests/test_api/: fixtures.py  test_history.py  test_user_api.py  test_weather.py
tests/test_service/: fixtures.py  test_http_weather.py
tests/test_utils/: test_utils.py
(+54 files in other folders)
