[project]
name = "weather-fetcher-task"
version = "0.1.0"
# TODO: Add description
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.136.1",
    "fastapi-users[sqlalchemy]>=15.0.5",
    "greenlet>=3.5.0",
    "gunicorn>=26.0.0",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.49",
    "sqlalchemy-utils>=0.42.1",
    "stamina>=26.1.0",
    "structlog>=25.5.0",
    "uvicorn>=0.47.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "dirty-equals>=0.11",
    "polyfactory>=3.3.0",
    "pytest-asyncio>=1.3.0",
    "pytest-env>=1.6.0",
    "ruff>=0.15.13",
    "testcontainers[postgres,redis]>=4.14.2",
]
